# personal

./: .replit  README.md  design_guidelines.md  package-lock.json  package.json  replit.md
attached_assets/: Pasted-STAR-DeFi-Platform-Complete-Project-Brief-Objective-Build-a-premium-level-DeFi-dApp-called-STAR--1762707443422_1762707443426.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AppHeader.tsx  BottomNav.tsx  CreateProjectWizard.tsx  Dashboard.tsx  Documentation.tsx  GlobalStats.tsx  MintPoints.tsx  ProjectCard.tsx  Sidebar.tsx  WalletConnectButton.tsx
client/src/components/examples/: AppHeader.tsx  BottomNav.tsx  CreateProjectWizard.tsx  Dashboard.tsx  Documentation.tsx  GlobalStats.tsx  Landing.tsx  MainApp.tsx  MintPoints.tsx  ProjectCard.tsx  Sidebar.tsx
client/src/config/: contracts.ts
client/src/contexts/: WalletContext.tsx
client/src/lib/: sorobanClient.ts  walletConnect.ts
client/src/pages/: Landing.tsx  MainApp.tsx
contracts/: Cargo.toml  Makefile  README.md
contracts/star_token/: Cargo.toml
contracts/star_token/src/: lib.rs
contracts/token_launch/: Cargo.toml
contracts/token_launch/src/: lib.rs  storage.rs
server/: routes.ts  storage.ts
shared/: schema.ts
